# 44con-bin2ml-workshop-material

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.sh
py/: pyproject.toml
py/bin2mlpy/data_utils/: convert_and_pickle.py
py/bin2mlpy/eval/: eval.py
py/bin2mlpy/training/: gnn.py  train.py
py/labs/: 01_prepare_data.ipynb  02_train_and_eval_gnn.ipynb
